<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_logout" />
    </group>

</menu>
